# html/app/api-docs.json
@@ -11,12 +11,57 @@
     ],
     "paths": {
         "/api/v1": {},
-        "/api/v1/roles/{id}": {
+        "/roles": {
+            "post": {
+                "tags": [
+                    "Role"
+                ],
+                "operationId": "af6b32baf16ebe819bcc525bcd8692ff",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/CreateRoleParams"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "create",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UidSuccessApiResponse"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorResponse"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "ApiKey": []
+                    }
+                ]
+            }
+        },
+        "/roles/{id}": {
             "get": {
                 "tags": [
-                    "Roles"
+                    "Role"
                 ],
-                "operationId": "47f2984692570ac33513a01d4d80aca2",
+                "operationId": "e67fb0b467d6552f1fc088fade9fe9dd",
                 "parameters": [
                     {
                         "name": "id",
@@ -59,6 +104,16 @@
     },
     "components": {
         "schemas": {
+            "Uid": {
+                "properties": {
+                    "uid": {
+                        "type": "string",
+                        "example": "01JC083YJ6K9D91BW4WQQBWWZH",
+                        "nullable": false
+                    }
+                },
+                "type": "object"
+            },
             "Role": {
                 "properties": {
                     "uid": {
@@ -109,16 +164,65 @@
                 },
                 "type": "object"
             },
+            "CreateRoleParams": {
+                "properties": {
+                    "role_name": {
+                        "type": "string",
+                        "example": "mock string",
+                        "nullable": false
+                    },
+                    "description": {
+                        "type": "string",
+                        "example": "mock description",
+                        "nullable": true
+                    }
+                },
+                "type": "object"
+            },
+            "UidSuccessApiResponse": {
+                "properties": {
+                    "status": {
+                        "type": "integer",
+                        "example": 200,
+                        "nullable": false
+                    },
+                    "message": {
+                        "type": "string",
+                        "example": "OK",
+                        "nullable": false
+                    },
+                    "timestamp": {
+                        "type": "string",
+                        "example": "2024-11-06T08:05:38.486431+00:00",
+                        "nullable": false
+                    },
+                    "data": {
+                        "oneOf": [
+                            {
+                                "$ref": "#/components/schemas/Uid"
+                            }
+                        ],
+                        "nullable": true
+                    }
+                },
+                "type": "object"
+            },
             "RoleSuccessApiResponse": {
                 "properties": {
                     "status": {
-                        "type": "integer"
+                        "type": "integer",
+                        "example": 200,
+                        "nullable": false
                     },
                     "message": {
-                        "type": "string"
+                        "type": "string",
+                        "example": "OK",
+                        "nullable": false
                     },
                     "timestamp": {
-                        "type": "integer"
+                        "type": "string",
+                        "example": "2024-11-06T08:05:38.486431+00:00",
+                        "nullable": false
                     },
                     "data": {
                         "oneOf": [
@@ -135,15 +239,18 @@
                 "properties": {
                     "status": {
                         "type": "integer",
-                        "example": 200
+                        "example": 200,
+                        "nullable": false
                     },
                     "message": {
                         "type": "string",
-                        "example": "OK"
+                        "example": "OK",
+                        "nullable": false
                     },
                     "timestamp": {
                         "type": "string",
-                        "example": "2024-11-06T08:05:38.486431+00:00"
+                        "example": "2024-11-06T08:05:38.486431+00:00",
+                        "nullable": false
                     },
                     "data": {
                         "type": "object",
@@ -157,15 +264,18 @@
                 "properties": {
                     "status": {
                         "type": "integer",
-                        "example": 404
+                        "example": 400,
+                        "nullable": false
                     },
                     "message": {
                         "type": "string",
-                        "example": "any error message goes here"
+                        "example": "mock error message",
+                        "nullable": false
                     },
                     "timestamp": {
                         "type": "string",
-                        "example": "2024-11-06T08:05:38.486431+00:00"
+                        "example": "2024-11-06T08:05:38.486431+00:00",
+                        "nullable": false
                     },
                     "data": {
                         "type": "object",
@@ -191,8 +301,8 @@
     },
     "tags": [
         {
-            "name": "Roles",
-            "description": "Roles"
+            "name": "Role",
+            "description": "Role"
         }
     ]
 }
